# hyprquery

./: .clangd  .envrc  .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: cmake-single-platform.yml
man/: hyprquery
nix/: CMakeLists.txt  README.md  package.nix  shell.nix
release/: hyq
schema/: hyprland.json
scripts/: update_compile_commands.sh
src/: ConfigUtils.cpp  ConfigUtils.hpp  ExportEnv.cpp  ExportEnv.hpp  ExportJson.cpp  ExportJson.hpp  HyprlangCompat.cpp  HyprlangCompat.hpp  SourceHandler.cpp  SourceHandler.hpp  hyprlang_compat.hpp  main.cpp
test/config/: colors.conf  config.conf  test.conf  theme.conf  try.conf
test/schema/: hyprland.json
